tdf#166779: use model first to obtain selection

The current frame can be Basic, so only use it as a fallback to obtain selection.
Also, failure to get the selection is not fatal here.

The throwing behavior was since commit aa1927dc257b52edf96de220cc3797e02c83a0ae
(Make svg export use slidesorter selection in most cases., 2012-10-10).

(cherry picked from commit 58ba249df589b0c9f91667f2938bfa18d2a1ce61)

Change-Id: I06f80151b4184f353d1d5387c11837f1e883a068